fixed responsive design on mobile mode

--- a/css/main.css
+++ b/css/main.css
@@ -424,6 +424,7 @@ body {
   		width: 100%;
   		text-align: center;
   		padding: 10px 0 20px 0;
+  		margin: 0;
   	}
   	.list__item {
   		margin-right: 2px;
